Add first name to create child tags page

--- a/client/templates/workers/createChildTag.html
+++ b/client/templates/workers/createChildTag.html
@@ -3,6 +3,14 @@
     <div class="col-md-4">
       <h2>Child Info</h2>
       <input 
+        class="form-control"
+        required
+        ng-pattern="/[\D]/g"
+        ng-model="tempChildObj.firstName" 
+        type="text" 
+        name="firstName" 
+        placeholder="First Name"/>
+      <input 
       class="form-control"
       required
       ng-pattern="/[\D]/g"
