Add more useful headings on collapse for children's feed + simple css styling

--- a/client/assets/stylesheets/style.css
+++ b/client/assets/stylesheets/style.css
@@ -64,6 +64,15 @@
   padding-top: 60px;
 }
 
+/* Worker Panel Styles */
+.children-feed .pledged{
+  color: green;
+}
+
+.children-feed .not-pledged{
+  color: grey;
+}
+
 /* Admin Dashboard Styles */
 #internal-navigation{
 
