--- a/client/templates/public/donationSubmitted.html
+++ b/client/templates/public/donationSubmitted.html
@@ -3,20 +3,13 @@
   <h4>
     Your donation request has been submitted!
     <br/>
-    <br/>
     Please check your email for further instructions.
   </h4>
 
   <br/>
 
-  <h5>
-    Redirecting to home...
-  </h5>
-
-  <br/>
-
   <p>
-    <a ui-sref="root">Click here if you're not redirected in 3 seconds</a>
+    <a ui-sref="root">Click here to return home</a>
   </p>
 
 </div>
