Fix HTML/CSS on pledge form so fields are properly aligned

--- a/client/templates/public/pledge.html
+++ b/client/templates/public/pledge.html
@@ -1,4 +1,4 @@
-<div class="pledge">
+<div class="pledge container">
   <h2 class="center">
     Donation submission for {{ currentChild.firstName }} from {{ currentChild.location }}
   </h2>
