--- a/client/templates/workers/childrenFeed.html
+++ b/client/templates/workers/childrenFeed.html
@@ -38,7 +38,7 @@
         <table class="table table-condensed table-striped">
         <div class="col-md-4"></div>
           <div class="col-md-4 center">
-            <img style="height: 200px" ng-src="http://localhost:4568/images/{{ child.image }}" alt="{{ child.firstName }}">
+            <img style="height: 200px" ng-src="/images/{{ child.image }}" alt="{{ child.firstName }}">
             <div ng-controller="imageController" style="border: 1px solid lightgrey; border-radius: 2px">
             <div ng-hide="child.image">
               Please Upload a Photo
