--- a/client/templates/authentication/resetPasswordView.html
+++ b/client/templates/authentication/resetPasswordView.html
@@ -1,9 +1,18 @@
-<h1>{{userHeader}} Reset Password</h1>
+<div class="container">
 
-<div class="alert alert-danger" ng-show="error">{{error}}</div>
+  <div class="col-md-4"></div>
+  <div class="col-md-4 auth-box">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h1 class="panel-title">{{userHeader}} Reset Password</h1>
+      </div>
 
-<form ng-submit="resetPassword()">
-  <input placeholder="password" type="password" ng-model="password">
-  <input placeholder="confirm password" type="password" ng-model="passwordConfirmation">
-  <input type="submit">
-</form>
+    <div class="alert alert-danger" ng-show="error">{{error}}</div>
+    <form ng-submit="resetPassword()">
+      <input placeholder="password" type="password" ng-model="password" class="form-control">
+      <input placeholder="confirm password" type="password" ng-model="passwordConfirmation" class="form-control">
+      <input type="submit" class="form-control btn-primary">
+    </form>
+  </div>
+  <div class="col-md-4"></div>
+</div>
