--- a/client/templates/authentication/signupView.html
+++ b/client/templates/authentication/signupView.html
@@ -1,6 +1,16 @@
-<form ng-submit="signup()">
-  <input placeholder="email address" type="email" ng-model="email">
-  <input placeholder="password" type="password" ng-model="password">
-  <input placeholder="password confirmation" type="password" ng-model="passwordConfirmation">
-  <input type="submit">
-</form>
+<div class="container">
+  <div class="col-md-4"></div>
+  <div class="col-md-4 auth-box">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <div class="panel-title">{{userHeader}} Signin</div>
+      </div>
+      <form ng-submit="signup()">
+        <input placeholder="email address" type="email" ng-model="email" class="form-control">
+        <input placeholder="password" type="password" ng-model="password" class="form-control">
+        <input placeholder="password confirmation" type="password" ng-model="passwordConfirmation" class="form-control">
+        <input type="submit" class="form-control btn-primary">
+      </form>
+    </div>
+  <div class="col-md-4"></div>
+</div>
