Clean up stylings for authentication pages

--- a/client/templates/authentication/resetPasswordView.html
+++ b/client/templates/authentication/resetPasswordView.html
@@ -4,7 +4,7 @@
   <div class="col-md-4 auth-box">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <h1 class="panel-title">{{userHeader}} Reset Password</h1>
+        <div class="panel-title">{{userHeader}} Reset Password</div>
       </div>
 
     <div class="alert alert-danger" ng-show="error">{{error}}</div>
