--- a/client/templates/authentication/sendResetView.html
+++ b/client/templates/authentication/sendResetView.html
@@ -4,7 +4,7 @@
   <div class="col-md-4 auth-box">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <h1 class="panel-title">{{userHeader}} Send Password Reset</h1>
+        <div class="panel-title">{{userHeader}} Send Password Reset</div>
       </div>
 
       <div class="alert alert-info" ng-show="status">{{status}}</div>
