--- a/client/templates/authentication/signinView.html
+++ b/client/templates/authentication/signinView.html
@@ -4,7 +4,7 @@
   <div class="col-md-4 auth-box">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <h1 class="panel-title">{{userHeader}} Signin</h1>
+        <div class="panel-title">{{userHeader}} Signin</div>
       </div>
       <form ng-submit="signin()" >
         <input placeholder="email address" type="email" ng-model="email" class="form-control">
