--- a/client/templates/authentication/signupView.html
+++ b/client/templates/authentication/signupView.html
@@ -3,7 +3,7 @@
   <div class="col-md-4 auth-box">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <div class="panel-title">{{userHeader}} Signin</div>
+        <div class="panel-title">{{userHeader}} Signup</div>
       </div>
       <form ng-submit="signup()">
         <input placeholder="email address" type="email" ng-model="email" class="form-control">
