--- a/client/templates/helpDesk/account/users.html
+++ b/client/templates/helpDesk/account/users.html
@@ -12,12 +12,8 @@
 </ul>
 
 <table class="table table-striped">
-  <tr><th>User ID</th><th>Email</th><th>Privileges</th><th>Send Reset Email</th></tr>
+  <tr><th>User ID</th><th>Email</th><th>Send Reset Email</th></tr>
   <tr ng-repeat="user in users"><td>{{ user.id }}</td><td>{{ user.email }}</td>
-    <td>
-      <button class="btn btn-primary" ng-click="grantAccess(user)" ng-hide="user.hasAccess" ng-disabled="user.waitAccess === 1">Grant Access</button>
-      <button class="btn btn-danger" ng-click="revokeAccess(user)" ng-show="user.hasAccess" ng-disabled="user.waitAccess === 1">Revoke Access</button>
-    </td>
     <td>
       <button 
         class="btn btn-primary" ng-click="issuePasswordReset(user)" ng-disabled="user.waitPasswordReset === 1" ng-hide="user.waitPasswordReset === 2">Send Password Reset Email</button>
