Add signout button to all user portals

--- a/client/templates/helpDesk/account.html
+++ b/client/templates/helpDesk/account.html
@@ -10,6 +10,9 @@
         <li><a ui-sref="helpDesk.account.accountManagement.admin">Show Admin Accounts</a></li>
         <li><a ui-sref="helpDesk.account.accountManagement.helpDesk">Show Help Desk Accounts</a></li>
       </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a ui-sref="helpDesk.signout">Sign Out</a></li>
+      </ul>
     </div>
   </div>
 </nav>
