--- a/client/templates/workers/account.html
+++ b/client/templates/workers/account.html
@@ -6,7 +6,9 @@
         <li><a ui-sref=".myAccount">My Account</a></li>
         <li><a ui-sref=".myTags">My Children Tags</a></li>
         <li><a ui-sref=".create">Create Child Tag</a></li>
-        <li><a href="#" ng-click="signout()">Signout</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a ui-sref="workers.signout">Signout</a></li>
       </ul>
     </div>
   </nav>
