--- a/client/templates/admin/reports.html
+++ b/client/templates/admin/reports.html
@@ -1,6 +1,6 @@
 <h1>Generate Reports</h1>
 
-<div class="alert alert-info" ng-show="generatingReport">{{generateReportMessage}}</div>
+<div class="alert alert-info" ng-show="generateReportMessage">{{generateReportMessage}}</div>
 <div class="alert alert-danger" ng-show="error">{{error}}</div>
 
 <div class="row" ng-hide="generatingReport" ng-submit="generateReport()">
