--- a/client/templates/workers/createChildTag.html
+++ b/client/templates/workers/createChildTag.html
@@ -15,6 +15,7 @@
       type="text" 
       name="firstName" 
       placeholder="First Name"/>
+      <br/>
       <input 
       class="form-control"
       required
@@ -23,6 +24,7 @@
       type="text" 
       name="lastName" 
       placeholder="Last Name"/>
+      <br/>
       <input
       class="form-control"
       required 
@@ -31,11 +33,13 @@
       type="text" 
       name="childPhone" 
       placeholder="Phone"/>
+      <br/>
       <select class="form-control" ng-model="tempChildObj.gender" name="gender">
         <option value="" selected>Choose Gender</option> 
         <option value="male">Male</option> 
         <option value="female">Female</option>
       </select>
+      <br/>
       <input
       class="form-control"
       required 
@@ -43,6 +47,7 @@
       ng-model="tempChildObj.dob" 
       type="date" 
       name="dob"/>
+      <br/>
       <input
       class="form-control"
       required 
@@ -51,6 +56,7 @@
       type="text" 
       name="age" 
       placeholder="Age"/>
+      <br/>
       <input
       class="form-control"
       required 
@@ -58,6 +64,7 @@
       type="text" 
       name="location" 
       placeholder="Location"/>
+      <br/>
       <input
       class="form-control"
       required 
@@ -65,6 +72,12 @@
       type="text" 
       name="programArea" 
       placeholder="Program Area"/>
+      <br/>
+      <div style="width: 100%; text-align: center">
+        Please upload an image<span ng-hide="tempChildObj.firstName">.</span> <span ng-show="tempChildObj.firstName"> of {{ tempChildObj.firstName }}. </span>
+        <br/>
+        <strong style="color: red">Square images look best.</strong>
+      </div>
     </div>
     <div class="col-md-6">
       <h2 class="center">Request Info
