--- a/client/templates/public/confirmationEmail.html
+++ b/client/templates/public/confirmationEmail.html
@@ -15,7 +15,7 @@ This will be deleted for production, but must remain in the meantime to help cre
 <p>Dear ' + reqBody.firstName + ',</p>
 <div style="margin-left: 20px">
   <p>Thank you for making a cash donation to the County of San Mateo\'s Children\'s Fund.</p>
-  <p>Please mail or drop-off cash in the amount of <strong>$' + totalDonation + '</strong> to:</p>
+  <p>Please mail or drop-off your cash donation in the amount of <strong>$' + totalDonation + '</strong> to:</p>
   <p style="margin-left: 20px">
     Children\'s Fund<br/>
     1 Davis Drive<br/>
@@ -24,11 +24,11 @@ This will be deleted for production, but must remain in the meantime to help cre
   <p>For your records, please keep your donation number in a safe place:</p>
   <H2>' + childObj.cfid + '</H2>
   <p>This number will allow you to receive your tax benefit.</p>
-  <p>If you have any questions, please contact us at <a href="mailto:childrensfund@smchsa.org">childrensfund@smchsa.org</a> or by phone at (650) 802-5152</p>
+  <p>If you have any questions, please contact us at <a href="mailto:childrensfund@smchsa.org">childrensfund@smchsa.org</a> or by phone at (650) 802-5152.</p>
   <br/>
   <p>Thank you again,</p>
-  <p>County of San Mateo</p>
   <p>Children\'s Fund</p>
+  <p>County of San Mateo</p>
 </div>
 
 
@@ -54,42 +54,37 @@ This will be deleted for production, but must remain in the meantime to help cre
   <p>For your records, please keep your donation number in a safe place:</p>
   <H2>' + childObj.cfid + '</H2>
   <p>This number will allow you to receive your tax benefit.</p>
-  <p>If you have any questions, please contact us at <a href="mailto:childrensfund@smchsa.org">childrensfund@smchsa.org</a> or by phone at (650) 802-5152</p>
+  <p>If you have any questions, please contact us at <a href="mailto:childrensfund@smchsa.org">childrensfund@smchsa.org</a> or by phone at (650) 802-5152.</p>
   <br/>
   <p>Thank you again,</p>
-  <p>County of San Mateo</p>
   <p>Children\'s Fund</p>
+  <p>County of San Mateo</p>
 </div>
 
 
 
 ---------ITEMS---------
 
-
-
-
 <p>Dear ' + reqBody.firstName + ',</p>
 <div style="margin-left: 20px">
-  <p>Thank you for making a donation to the County of San Mateo\'s Children\'s Fund.</p>
-  <p>Please purchase and <strong>include copies of your receipts</strong> for the following products:</p>
-  <ul>
-    <li>'+ childObj.firstItemName +': '+ childObj.firstItemPrice +'</li>
-    <li>'+ childObj.secondItemName +': '+ childObj.secondItemPrice +'</li>
-    <li>'+ childObj.thirdItemName +': '+ childObj.thirdItemPrice +'</li>
-  </ul>
-
-  <p>Items can be mailed or dropped off to:</p>
-  <p style="margin-left: 20px">
-  Children\'s Fund<br/>
-  1 Davis Drive<br/>
-  Belmont, CA 94002<br/>
-  </p>
-  <strong>Please include the following number with your package of items:</strong>
-  <H2>' + childObj.cfid + '</H2>
-  <p>This number will allow you to receive your tax benefit.</p>
-  <p>If you have any questions, please contact us at <a href="mailto:childrensfund@smchsa.org">childrensfund@smchsa.org</a> or by phone at (650) 802-5152</p>
-  <br/>
-  <p>Thank you again,</p>
-  <p>County of San Mateo</p>
-  <p>Children\'s Fund</p>
+    <p>Thank you for making a donation to the County of San Mateo\'s Children\'s Fund.</p>
+    <p>Please purchase and <strong>include copies of your receipts</strong> for the following products:</p>
+    <ul>'
+     + (childObj.firstItemName ? '<li>'+ childObj.firstItemName +': $'+ childObj.firstItemPrice +'</li>' : '' ) 
+     + (childObj.secondItemName ? '<li>'+ childObj.secondItemName +': $'+ childObj.secondItemPrice +'</li>' : '' ) 
+     + (childObj.thirdItemName ? '<li>'+ childObj.thirdItemName +': $'+ childObj.thirdItemPrice +'</li>' : '' ) 
+    + '</ul>
+    <p>Items can be mailed or dropped off to:</p>
+    <p style="margin-left: 20px">Children\'s Fund
+        <br/>1 Davis Drive
+        <br/>Belmont, CA 94002
+        <br/>
+    </p><strong>Please include the following number with your package of items:</strong>
+    <H2>' + childObj.cfid + '</H2>
+    <p>This number will allow you to receive your tax benefit.</p>
+    <p>If you have any questions, please contact us at <a href="mailto:childrensfund@smchsa.org">childrensfund@smchsa.org</a> or by phone at (650) 802-5152.</p>
+    <br/>
+    <p>Thank you again,</p>
+    <p>Children\'s Fund</p>
+    <p>County of San Mateo</p>
 </div>
