workers can now edit donor information

--- a/client/templates/public/pledge.html
+++ b/client/templates/public/pledge.html
@@ -118,7 +118,7 @@
   Our tax ID number is: <strong>94-6000532</strong>
   </h4>
       <label>
-        <input type="radio" ng-model="donor.paymentMethod" value="items">I will be donating the requested items:<br/>
+        <input type="radio" ng-model="donor.paymentMethod" value="Items">I will be donating the requested items:<br/>
         <div>
         <ul>
           <li ng-show="currentChild.firstItemName">{{ currentChild.firstItemName }}</li>
